Update landing info

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -139,36 +139,48 @@ type: Person
                 <div class="u-repeater u-repeater-1">
                     <div class="u-container-style u-list-item u-repeater-item">
                         <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-1">
+                            <h2 class="u-text u-text-2">Machine Learning Researcher</h2>
+                            <p class="u-text u-text-grey-50 u-text-3" id="current_position"> July 2024 - now<br>
+                            </p>
+                            <p class="u-text u-text-4"> <a href="https://www.huawei.com/"
+                                    class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1"
+                                    target="_blank">Huawei</a>, Saint-Petersburg </p>
+                            <p class="u-text u-text-5">
+                                This is my current role. I enjoy working as a part of a very professional team on image processing and
+                                computer vision projects.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="u-container-style u-list-item u-repeater-item">
+                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-1">
                             <h2 class="u-text u-text-2">Machine Learning Engineer</h2>
-                            <p class="u-text u-text-grey-50 u-text-3" id="current_position"> October 2021 - now<br>
+                            <p class="u-text u-text-grey-50 u-text-3"> October 2021 - July 2024 | 3 years<br>
                             </p>
                             <p class="u-text u-text-4"> <a href="https://sarafan.tech"
                                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1"
                                     target="_blank">Sarafan Technologies</a>, Saint-Petersburg </p>
                             <p class="u-text u-text-5">
-                                This position offered a certain challenge at first, demanding
+                                This position offered a certain challenge, demanding
                                 to generalize from only-computer-vision tasks to
-                                general ML, speech processing and more. Working in a relatively small team
-                                I learned to work independently and build ML-driven systems from scratch starting
-                                from the data gathering and ending with the feedback collection and gradual improvement.
+                                general ML, speech processing and more. Working in a small team
+                                I learned to be independent and build ML-driven systems from scratch starting
+                                from data gathering and ending with feedback collection and gradual improvement.
                             </p>
                         </div>
                     </div>
                     <div class="u-container-style u-list-item u-repeater-item">
                         <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-1">
                             <h2 class="u-text u-text-2">Computer Vision Developer</h2>
-                            <p class="u-text u-text-grey-50 u-text-3">January 2021 - August
-                                2021 | 8 months</p>
+                            <p class="u-text u-text-grey-50 u-text-3">January 2021 - August 2021 | 8 months</p>
                             <p class="u-text u-text-8"> <a href="https://3divi.com/"
                                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-2"
                                     target="_blank">3DiVi Inc.</a>, Chelyabinsk </p>
                             <p class="u-text u-text-5">Developed several projects using C++
                                 and Python with a team.
-                                While working on one of the projects, independently developed
-                                and implemented solution for head-pose
-                                calibration problem.
-                                With the same project implemented and maintained internal
-                                product usage cycle, which was used for
+                                Independently developed
+                                and implemented a solution for head-pose calibration problem.
+                                Implemented and maintained internal
+                                product usage cycle, for
                                 customer-side issues identification.</p>
                         </div>
                     </div>
@@ -366,9 +378,8 @@ type: Person
             <h4 class="u-text u-text-default u-text-6">Languages</h4>
             <ul class="u-text u-text-default u-text-11">
                 <li> <span style="font-size: 1.5rem;">Russian - Native</span> </li>
-                <li> <span style="font-size: 1.5rem;">English - B2 | FCE
-                    </span> </li>
-                <li> <span style="font-size: 1.5rem;">German - A2</span> </li>
+                <li> <span style="font-size: 1.5rem;">English - Fluent</span> </li>
+                <li> <span style="font-size: 1.5rem;">German - Elementary</span> </li>
             </ul>
         </div>
     </section>
@@ -408,12 +419,12 @@ type: Person
         </div>
     </footer>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         var today = new Date();
         var year = today.getFullYear()
-        var passed = year - 2021
-        document.getElementById("current_position").textContent = "October 2021 - now | " + passed + " years";
-    </script>
+        var passed = year - 2024
+        document.getElementById("current_position").textContent = "October 2024 - now | " + passed + " years";
+    </script> -->
 
 </body>
 
